--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 * Author: Cserhati David
 * Copyright: 2023, Cserhati David
 * Group: Szoft I-2 N
-* Date: 2023-02-23
+* Date: 2023-03-09
 * Github: https://github.com/CserhatiDavid/
 * Licenc: GNU GPL
 * Nem vállalunk felelősséget a rossz jegyekért
@@ -19,30 +19,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
-    <title>Hatszoggyep</title>
+    <title>Triangle</title>
 </head>
 <body>
     <div id="container">
-        <h1>Hatszoggyep</h1>
-        <div>
-            <div id="A">
-                <label for="a">Egyik hatszög oldala</label>
-                <input type="text" id="a">
+
+        <h1>Triangle, area calculation</h1>
+
+        <div class="triangleForm">
+            <div class="mt-3">
+                <label for="base" class="form-label">Alap</label>
+                <input type="text" id="base" class="form-control">
             </div>
-            <div>
-                <label for="b">Másik hatszög oldala</label>
-                <input type="text" id="b">
+            <div class="mt-3">
+                <label for="height" class="form-label">Magasság</label>
+                <input type="text" id="height" class="form-control">
             </div>
-            <div>
-                <button id="calcButton">Számít</button>
-            </div>
-            <div>
-                <label for="areaA">result if house A</label>
-                <input type="text" id="areaA">
-            </div>
-            <div>
-                <label for="areaA">result if house B</label>
-                <input type="text" id="areaB">
+            <button id="calcButton" class="btn btn-primary">Számít</button>
+            <div class="mt-3">
+                <label for="area" class="form-label">Terület</label>
+                <input type="text" id="area" class="form-control">
             </div>
         </div>
     </div>
