--- a/src/index.html
+++ b/src/index.html
@@ -26,22 +26,22 @@
         <h1>Hatszoggyep</h1>
         <div>
             <div id="A">
-                <label for="a">Egyik hatszög oldala</label>
+                <label for="a">A hatszög oldala</label>
                 <input type="text" id="a">
             </div>
             <div>
-                <label for="b">Másik hatszög oldala</label>
+                <label for="b">B hatszög oldala</label>
                 <input type="text" id="b">
             </div>
-            <div>
+            <div id="gomb">
                 <button id="calcButton">Számít</button>
             </div>
             <div>
-                <label for="areaA">result if house A</label>
+                <label for="areaA">house az A hatszögen van</label>
                 <input type="text" id="areaA">
             </div>
             <div>
-                <label for="areaA">result if house B</label>
+                <label for="areaA">house az B hatszögen van</label>
                 <input type="text" id="areaB">
             </div>
         </div>
